sf-hrms/force-app/main/default/objects/Leave_Balance__c/fields/Accrued__c.field-meta.xml
<CustomField>
    <fullName>Accrued__c</fullName>
    <label>Accrued</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>1</scale>
</CustomField>