sf-hrms/force-app/main/default/objects/Leave_Balance__c/fields/Availed__c.field-meta.xml
<CustomField>
    <fullName>Availed__c</fullName>
    <label>Availed</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>1</scale>
</CustomField>