sf-hrms/force-app/main/default/objects/Leave_Balance__c/fields/Closing_Balance__c.field-meta.xml
<CustomField>
    <fullName>Closing_Balance__c</fullName>
    <label>Closing Balance</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>1</scale>
</CustomField>