sf-hrms/force-app/main/default/objects/Leave_Balance__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <label>Employee</label>
    <type>Lookup</type>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Leave Balances</relationshipLabel>
    <relationshipName>Leave_Balance_Employees</relationshipName>
</CustomField>