sf-hrms/force-app/main/default/objects/Leave_Balance__c/fields/Leave_Type__c.field-meta.xml
<CustomField>
    <fullName>Leave_Type__c</fullName>
    <label>Leave Type</label>
    <type>Lookup</type>
    <referenceTo>Leave_Type__c</referenceTo>
    <relationshipLabel>Leave Balances</relationshipLabel>
    <relationshipName>Leave_Balance_Leave_Types</relationshipName>
</CustomField>