sf-hrms/force-app/main/default/objects/Leave_Balance__c/validationRules/Closing_Non_Negative.validationRule-meta.xml
<ValidationRule>
    <fullName>Closing_Non_Negative</fullName>
    <active>false</active>
    <errorConditionFormula>Closing_Balance__c &lt; 0</errorConditionFormula>
    <errorMessage>Closing balance cannot be negative.</errorMessage>
    <description>Deactivated. Closing_Balance__c is derived by LeaveRequestTriggerHandler; a negative value means over-availed leave, not a bad write. Blocking it stops the balance update and therefore every leave request. Sufficiency is enforced at request time.</description>
</ValidationRule>